--- a/index.html
+++ b/index.html
@@ -34,8 +34,15 @@
 
     </div>
     <div id="nao">
-       
-
+    </div>
+    <div class="absolute border-solid w-80 h-40  bg-transparent	 flex flex-col justify-center items-center gap-4	border-red-700 border  rounded-md backdrop-blur-sm
+    shadow-2xl hidden
+    " id="cardInfor">
+        <div>
+            <p>Ja registrado</p>
+        </div>
+        
+        <div><button id="Ja_comeu" class="border-red-700 border p-1 w-32 bg-lime-700		">OK</button></div>
     </div>
 
     <script type="module"  src="src/js/index.js"></script>
